--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <title>Exploring github</title>
 </head>
 <body>
-    <h1>Exploring github</h1>
+    <h1>Exploring github report</h1>
+    <div>
+        <h3>for every other time report</h3>
+        <p>git add .</p>
+        <p>git commit -m "your meaningful commit massage"</p>
+        <p></p>
+    </div>
 </body>
 </html>
