displying image of the cute -1 and add the html file

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
         <h3>for every other time report</h3>
         <p>git add .</p>
         <p>git commit -m "your meaningful commit massage"</p>
-        <p></p>
+        <p>git push</p>
     </div>
+        <img src="images/cute-1.jpeg" alt="">
+    
 </body>
 </html>
